# paperplot

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  mkdocs.yml  paperplot_DESIGN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
binder/: requirements.txt
docs/: gallery.md  generate_gallery.py  index.md  install.md  showcase.ipynb
examples/: run_all.py  showcase.py
paperplot/: __init__.py  core.py  fonts.py  journals.py  layout.py  lint.py  mplstyle.py  palettes.py  plots.py  preview.py  registry.py  save.py  style.py
paperplot/data/: journals.toml
paperplot/data/fonts/: LICENSE.md
tests/: conftest.py  test_fonts.py  test_paperplot.py  test_plots.py  test_robustness.py
