[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paperplot"
version = "0.1.0"
description = "Publication-correct matplotlib figures, journal by journal (APS, Nature, IEEE, + presentation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zlatko Minev" }]
keywords = ["matplotlib", "publication", "figures", "physics", "APS", "Physical Review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.21",
    "tomli>=1.2 ; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/zlatko-minev/paperplot"
Documentation = "https://zlatko-minev.github.io/paperplot/"
Repository = "https://github.com/zlatko-minev/paperplot"
Issues = "https://github.com/zlatko-minev/paperplot/issues"

[project.optional-dependencies]
notebook = ["IPython>=7"]
seaborn = ["seaborn>=0.12"]
dev = ["pytest>=7"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.24",
    "jupytext>=1.16",
    "nbconvert>=7",
    "ipykernel>=6",
]

[tool.setuptools]
packages = ["paperplot"]
# Record the project license plus the bundled-font licenses in package metadata.
license-files = [
    "LICENSE",
    "paperplot/data/fonts/LICENSE.md",
    "paperplot/data/fonts/GUST-FONT-LICENSE.txt",
]

[tool.setuptools.package-data]
paperplot = ["data/*.toml", "data/fonts/*"]
